# codeparser

./: .WolframResources  .gitignore  .lfsconfig  .project  BuildingCodeParser.nb  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  HowToBuild.md  LICENSE  PacletInfo.m  README.md  run_tests.wls
.github/workflows/: run_tests.wls  workflow.yml
AST/: AST.wl  Abstract.wl  Boxes.wl  DeclarationName.wl  Node.wl  PacletInfo.m  Symbol.wl  ToFullFormString.wl  ToInputFormString.wl  Utils.wl
AST/Generate/: CharacterMaps.wl  CodePoint.wl  ExpressionLibrary.wl  Generate.wl  GenerateExpressionLibrary.wl  GenerateSources.wl  LongNameDefines.wl  LongNames.wl  PackPaclet.wl  Parselet.wl  Precedence.wl  Symbol.wl  Token.wl  TokenEnum.wl
AST/Kernel/: AST.wl  Abstract.wl  Boxes.wl  Build.wl  CodeAction.wl  DeclarationName.wl  Error.wl  Folds.wl  Library.wl  Node.wl  Quirks.wl  Shims.wl  Symbol.wl  ToFullFormString.wl  ToInputFormString.wl  ToString.wl  Utils.wl
AST/cpp/src/exe/: CMakeLists.txt  main.cpp
AST/cpp/src/lib/: API.cpp  ByteDecoder.cpp  ByteEncoder.cpp  CMakeLists.txt  CharacterDecoder.cpp  Node.cpp  Parselet.cpp  Parser.cpp  SourceManager.cpp  SyntaxIssue.cpp  ToInputFormString.cpp  Tokenizer.cpp  Utils.cpp
AST/tables/: LetterlikeLongNames.wl  LongNames.wl  NewlineLongNames.wl  OperatorLongNames.wl  Precedence.wl  SpaceLongNames.wl  TokenEnum.wl  (+2 more)
CodeParser/: PacletInfo.m  PacletInfo.wl.in
Tests/: ASTNotes.nb  Abstract.mt  AbstractCallNode.mt  AbstractSyntaxErrorNodes.mt  AbstractSyntaxIssues.mt  Aggregate.mt  Arrows.mt  Boxes.mt  CallMissingCloserNodes.mt  Characters.mt  CodeParser.mt  CodeParserNotes.nb  CodeSyntaxQ.mt  Concrete.mt  Concretify.mt  DeclarationName.mt  DefinitionSymbols.mt  Definitions.mt  Error.mt  Errors.mt  File.mt  FormatIssues.mt  Inequality.mt  LineContinuations.mt  Parse.mt  Quirks.mt  Regressions.mt  SafeString.mt  Scoping.mt  Span.mt  SyntaxErrorNodes.mt  SyntaxIssues.mt  TestSuite.mt  ToInputFormString.mt  ToNode.mt  ToString.mt  TokenEnum.mt  TokenErrors.mt  Tokenize.mt  TopLevel.mt  (+5 more)
cmake/: CreatePacletArchive.cmake  GenerateExpressionLibrary.cmake  GenerateSources.cmake  InspectFile.cmake  InstallPaclet.cmake  MacOSXVersionMin.cmake  PackPaclet.cmake  PacletInfo.cmake  ReplacePacletInfo.cmake  WolframKernel.cmake  WolframLibrary.cmake  WolframScript.cmake
cpp/src/exe/: CMakeLists.txt  main.cpp
cpp/test/: CMakeLists.txt  TestAPI.cpp  TestBufferAndLength.cpp  TestByteDecoder.cpp  TestCharacterDecoder.cpp  TestCrashers.cpp  TestNode.cpp  TestOffsetLineMap.cpp  TestParselet.cpp  TestSourceCharacter.cpp  TestTokenEnum.cpp  TestTokenizer.cpp  TestWLCharacter.cpp
crate/: Cargo.toml
crate/benches/: bench_fast_string_scan.rs  bench_general.rs
crate/src/: Issue.cpp  abstract_.rs  agg.rs  api.rs  ast.rs  byte_buffer.rs  byte_decoder.rs  character_decoder.rs  code_point.rs  convert_expr.rs  convert_wstp.rs  cst.rs  error.rs  feature.rs  from_expr.rs  integral_parselet.rs  lib.rs  long_names.rs  my_string.rs  node.rs  parselet.rs  parser.rs  parser_session.rs  quirks.rs  semi_semi_parselet.rs  source.rs  symbol.rs  tests.rs  times_parselet.rs  token.rs  token_enum.rs  tokenizer.rs  under_parselet.rs  utils.rs  wl_character.rs  wll_api.rs
crate/src/abstract_/: abstract_call_node.rs
crate/src/tests/: test_api.rs  test_byte_decoder.rs  test_character_decoder.rs  test_crashers.rs  test_ffi.rs  test_node.rs  test_parselet.rs  test_source_character.rs  test_token_enum.rs  test_tokenizer.rs  test_wl_character.rs
crates/: rustfmt.toml
crates/codeparser-wll/: Cargo.toml
crates/codeparser-wll/src/: convert_expr.rs  convert_wstp.rs  from_expr.rs  lib.rs
crates/wolfram-parser/: Cargo.toml  rustfmt.toml
crates/wolfram-parser/.cargo/: config
crates/wolfram-parser/benches/: bench_fast_string_scan.rs  bench_general.rs
crates/wolfram-parser/src/: abstract_.rs  abstract_cst.rs  agg.rs  ast.rs  byte_buffer.rs  byte_decoder.rs  byte_encoder.rs  character_decoder.rs  code_point.rs  cst.rs  error.rs  feature.rs  fmt_as_expr.rs  issue.rs  iter.rs  lib.rs  long_names.rs  macros.rs  node.rs  parse.rs  parse_cst.rs  parselet.rs  parser.rs  parser_session.rs  precedence.rs  quirks.rs  read.rs  source.rs  symbol.rs  symbols.rs  tests.rs  token.rs  tokenize.rs  tokenizer.rs  utils.rs  wl_character.rs
crates/wolfram-parser/src/abstract_/: abstract_call_node.rs
crates/wolfram-parser/src/abstract_cst/: abstract_call_node.rs
crates/wolfram-parser/src/cst/: visit.rs
crates/wolfram-parser/src/parse/: operators.rs  parselet.rs  parser_docs.rs  parser_session.rs  token_parselets.rs
crates/wolfram-parser/src/parse/parse_tests/: test_parselet.rs
crates/wolfram-parser/src/parse/parselet/: integral_parselet.rs  semi_semi_parselet.rs  times_parselet.rs  under_parselet.rs
crates/wolfram-parser/src/parselet/: integral_parselet.rs  semi_semi_parselet.rs  times_parselet.rs  under_parselet.rs
crates/wolfram-parser/src/parser/: parser_session.rs
crates/wolfram-parser/src/read/: byte_buffer.rs  byte_decoder.rs  character_decoder.rs  code_point.rs  wl_character.rs
crates/wolfram-parser/src/tests/: test_abstract.rs  test_api.rs  test_byte_decoder.rs  test_character_decoder.rs  test_crashers.rs  test_ffi.rs  test_node.rs  test_parse_cst.rs  test_parselet.rs  test_source_character.rs  test_token_enum.rs  test_token_errors.rs  test_tokenizer.rs  test_wl_character.rs
crates/wolfram-parser/src/tokenize/: token.rs  token_enum.rs  token_kind.rs  tokenizer.rs
docs/: Development.md  characters.md  characters.txt  compatibility.md  concretify.md  debugging.md  debugging.txt  docs.md  docs.txt  formats.txt  fuzz-testing.md  implementation.md  maintenance.md  modes.txt  nodes.md  operators.txt  quirks.md  quirks.txt  stages.md  stages.txt  tokens.md  tokens.txt
scripts/: BuildPacletInfo.wl  Generate.wl  Pack.wl  SystemID.wl  VersionNumber.wl  re_build_AST.xml  re_build_CodeParser.xml
tables/: CommaLongNames.wl  LongNames.wl  NewlineLongNames.wl  OperatorLongNames.wl  Precedence.wl  SpaceLongNames.wl  TokenEnum.wl  UninterpretableLongNames.wl
(+203 files in other folders)
